fix popup gap

--- a/spider-gbxml-viewer/v-0-17-04/thm-theme/style.css
+++ b/spider-gbxml-viewer/v-0-17-04/thm-theme/style.css
@@ -18,7 +18,7 @@
 	--screen-width: calc(100vw);
 	--headerHeight: 6rem;
 }
-
+S
 html {
 	height: 100%;
 }
@@ -135,6 +135,11 @@ summary:hover {
 	text-align: center;
 }
 
+.dragDropArea {
+	border: 1px dashed gray;
+	margin: 0.5rem;
+	padding: 0 0.5rem;
+}
 
 .secContents {
 	margin: 0 auto;
@@ -230,6 +235,7 @@ h1, h2, h3, h4, h5 {
 }
 
 /* lower right */
+
 #aViewSource {
 	position: fixed;
 	bottom: 20px;
@@ -254,11 +260,7 @@ h1, h2, h3, h4, h5 {
 	color: blue;
 }
 
-.dragDropArea {
-	border: 1px dashed gray;
-	margin: 0.5rem;
-	padding: 0 0.5rem;
-}
+
 
 #navDragMove {
 	background-color: #f1f1f1;
@@ -293,7 +295,7 @@ h1, h2, h3, h4, h5 {
 #divDragMoveContent {
 	height: 80%;
 	overflow: auto;
-	padding: 0 0 0 0.5rem;
+	padding: 0.5rem 0.5rem 0 0.5rem;
 }
 
 #divDragMoveFooter {
